Remove z-index from .image-container to prevent focus indicator obstruction

--- a/src/styles/css-variables/_z-index.scss
+++ b/src/styles/css-variables/_z-index.scss
@@ -1,5 +1,4 @@
 :root {
-	--z-background: -1;
 	--z-elevated: 1;
 	--z-editor: 10;
 	--z-header: 20;
